objects/Recap__c.object
<CustomObject>
    <description>This object is used for the Implementation Progress Report</description>
    <fields>
        <fullName>AIS_Rebates_Completed_Date__c</fullName>
        <label>AIS Rebates Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIS_Rebates_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>AIS Rebates Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIS_Rebates_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>AIS Rebates Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Project__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Admin Settings Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Ver_Complete_Date__c</fullName>
        <label>Admin Settings Ver. Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Ver_On_Time__c</fullName>
        <label>Admin Settings Ver. On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Verification_Form_Due_Dat__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Admin Settings Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_settings_verification_form_notes__c</fullName>
        <label>Admin Settings Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answered__c</fullName>
        <formula>Creative_Answered__c+Implementation_Answered__c+LC_Answered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code_Completed_Date__c</fullName>
        <label>BAC &amp; Dealer Code Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code_On_Time__c</fullName>
        <label>BAC &amp; Dealer Code On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BAC_and_Dealer_Code_Due__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>BAC and Dealer Code Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAC_and_Dealer_Code_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>BAC and Dealer Code Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Notes_Completed_Notes__c</fullName>
        <label>CRM Notes Completed - Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Notes_Completed__c</fullName>
        <label>CRM Notes Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Provider_Call_Tracking_Due__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Call Provider/Call Tracking Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Provider_Call_Tracking_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Call Provider/Call Tracking Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CarFax_AutoCheck_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>CarFax/AutoCheck Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carfax_Autocheck_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Carfax Autocheck Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carfax_Autocheck_Setup_Completed_Date__c</fullName>
        <label>Carfax Autocheck Setup Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carfax_Autocheck_Setup_On_Time__c</fullName>
        <label>Carfax Autocheck Setup On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_from__c</fullName>
        <label>Comments From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creative_Answered_New__c</fullName>
        <formula>CASE(q11__c, &quot;N/A&quot;,0,1)+
CASE(q15__c, &quot;N/A&quot;,0,1)+
CASE(IPM_Ad_Hoc_1__c, &quot;N/A&quot;,0,1)+
CASE(IPM_Ad_Hoc_2__c, &quot;N/A&quot;,0,1)+
CASE(IPM_Ad_Hoc_3__c, &quot;N/A&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creative Answered New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Answered__c</fullName>
        <formula>CASE(/*Photo Overlay Completed*/q11__c, &quot;N/A&quot;,0,1)+
CASE(/*Email Banner Completed?*/q15__c, &quot;N/A&quot;,0,1)+
CASE(/*Website Completed?*/R19__c, &quot;N/A&quot;,0,1)+
CASE(/*Mobile Completed?*/R20__c, &quot;N/A&quot;,0,1)+
CASE(/*VinChat Completed?*/R21__c, &quot;N/A&quot;,0,1)+
CASE(/*SEO Completed?*/R22__c, &quot;N/A&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creative Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Score_Count_New__c</fullName>
        <formula>CASE(q11__c, &quot;Yes&quot;,1,0)+
CASE(q15__c, &quot;Yes&quot;,1,0)+
CASE(IPM_Ad_Hoc_1__c, &quot;Yes&quot;,1,0)+
CASE(IPM_Ad_Hoc_2__c, &quot;Yes&quot;,1,0)+
CASE(IPM_Ad_Hoc_3__c, &quot;Yes&quot;,1,0)</formula>
        <label>Creative Score Count New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Score_Count__c</fullName>
        <formula>CASE(/*Photo Overlay Completed*/q11__c, &quot;Yes&quot;,1,0)+ 
CASE(/*Email Banner Completed?*/q15__c, &quot;Yes&quot;,1,0)+ 
CASE(/*Website Completed?*/R19__c, &quot;Yes&quot;,1,0)+ 
CASE(/*Mobile Completed?*/R20__c, &quot;Yes&quot;,1,0)+ 
CASE(/*VinChat Completed?*/R21__c, &quot;Yes&quot;,1,0)+ 
CASE(/*SEO Completed?*/R22__c, &quot;Yes&quot;,1,0)</formula>
        <label>Creative Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Score_New__c</fullName>
        <formula>Creative_Score_Count_New__c/Creative_Answered_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creative Score New</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Creative_Score__c</fullName>
        <formula>Creative_Score_Count__c/Creative_Answered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creative Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Credit Bureau Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Setup_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Credit Bureau Setup Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Push_Completed_Date__c</fullName>
        <label>DMS Push Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Push_Due__c</fullName>
        <label>DMS Push Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Push_On_Time__c</fullName>
        <label>DMS Push On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Push_Set_Days_Due__c</fullName>
        <defaultValue>25</defaultValue>
        <label>DMS Push Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS_Push__c</fullName>
        <label>DMS Push</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_push_notes__c</fullName>
        <label>DMS Push Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DT_R1_Push_Completed_Date__c</fullName>
        <label>DT/R1 Push Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DT_R1_Push_Due__c</fullName>
        <label>DT/R1 Push Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DT_R1_Push_On_time__c</fullName>
        <label>DT/R1 Push On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DT_R1_Push_Set_Days_Due__c</fullName>
        <defaultValue>25</defaultValue>
        <label>DT R1 Push Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_RT_1_Enabled_Tested__c</fullName>
        <label>DT/R1 Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DT_Route_1_push_notes__c</fullName>
        <label>DT/Route 1 Push Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Consultant__c</fullName>
        <description>Project Owner</description>
        <label>Data Consultant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_appends_Diamond_Accounts_notes__c</fullName>
        <label>Data Appends Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <formula>Project__r.Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Completed_Date__c</fullName>
        <label>Desking Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Completed_On_Time__c</fullName>
        <label>Desking Verification Completed On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Desking Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Set_Days_Due__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Desking Verification Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desking_Verification__c</fullName>
        <label>Desking Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desking_configuration_fees_notes__c</fullName>
        <label>Desking Configuration - Fees Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_configuration_from_DMS_notes__c</fullName>
        <label>Desking Configuration - From DMS Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_configuration_taxes_notes__c</fullName>
        <label>Desking Configuration - Taxes Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_verification_form_notes__c</fullName>
        <label>Desking Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_1_Notes__c</fullName>
        <label>IC Ad Hoc 1 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_1__c</fullName>
        <label>IC Ad Hoc 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_2_Notes__c</fullName>
        <label>IC Ad Hoc 2 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_2__c</fullName>
        <label>IC Ad Hoc 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_3_Notes__c</fullName>
        <label>IC Ad Hoc 3 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Ad_Hoc_3__c</fullName>
        <label>IC Ad Hoc 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_1_Notes__c</fullName>
        <label>IPM Ad Hoc 1 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_1__c</fullName>
        <label>IPM Ad Hoc 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_2_Notes__c</fullName>
        <label>IPM Ad Hoc 2 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_2__c</fullName>
        <label>IPM Ad Hoc 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_3_Notes__c</fullName>
        <label>IPM Ad Hoc 3 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Ad_Hoc_3__c</fullName>
        <label>IPM Ad Hoc 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Score_Answered__c</fullName>
        <formula>Creative_Answered_New__c +  Implementation_Answered_New__c +  LC_Answered_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Score Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Score_Count__c</fullName>
        <formula>Creative_Score_Count_New__c +  Implementation_Score_Count_New__c + LC_Score_Count_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Answered_New__c</fullName>
        <description>For answered after Oct 2015.</description>
        <formula>CASE(q2__c, &quot;N/A&quot;,0,1)+
CASE(q8__c, &quot;N/A&quot;,0,1)+
CASE(q4__c, &quot;N/A&quot;,0,1)+
CASE(q5__c, &quot;N/A&quot;,0,1)+
CASE(q13__c, &quot;N/A&quot;,0,1)+
CASE(q12__c, &quot;N/A&quot;,0,1)+
CASE(Success_Fail_Verification__c, &quot;N/A&quot;, 0,1)+
CASE(CRM_Notes_Completed__c, &quot;N/A&quot;, 0,1)+
CASE(q19__c, &quot;N/A&quot;,0,1)+
CASE(R14__c, &quot;N/A&quot;,0,1)+
CASE(q20__c, &quot;N/A&quot;,0,1)+
CASE(R17__c, &quot;N/A&quot;,0,1)+
CASE(q23__c, &quot;N/A&quot;,0,1)+
CASE(q27__c, &quot;N/A&quot;,0,1)+
CASE(q28__c, &quot;N/A&quot;,0,1)+
CASE(R18__c, &quot;N/A&quot;,0,1)+
CASE(q30__c, &quot;N/A&quot;,0,1)+
CASE(q31__c, &quot;N/A&quot;,0,1)+
CASE(Lot_Vantage__c, &quot;N/A&quot;, 0,1)+
CASE(xTime__c, &quot;N/A&quot;, 0,1)+
CASE(IC_Ad_Hoc_1__c, &quot;N/A&quot;, 0,1)+
CASE(IC_Ad_Hoc_2__c, &quot;N/A&quot;, 0,1)+
CASE(IC_Ad_Hoc_3__c, &quot;N/A&quot;, 0,1)</formula>
        <label>Implementation Answered New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Answered__c</fullName>
        <formula>CASE(q1__c, &quot;N/A&quot;,0,1)+
CASE(q2__c, &quot;N/A&quot;,0,1)+
CASE(q8__c, &quot;N/A&quot;,0,1)+
CASE(q3__c, &quot;N/A&quot;,0,1)+
CASE(R13__c, &quot;N/A&quot;,0,1)+
CASE(q4__c, &quot;N/A&quot;,0,1)+
CASE(q5__c, &quot;N/A&quot;,0,1)+
CASE(q6__c, &quot;N/A&quot;,0,1)+
CASE(q7__c, &quot;N/A&quot;,0,1)+
CASE(q10__c, &quot;N/A&quot;,0,1)+
CASE(q12__c, &quot;N/A&quot;,0,1)+
CASE(R14__c, &quot;N/A&quot;,0,1)+
CASE(q13__c, &quot;N/A&quot;,0,1)+
CASE(q19__c, &quot;N/A&quot;,0,1)+
CASE(R15__c, &quot;N/A&quot;,0,1)+
CASE(R16__c, &quot;N/A&quot;,0,1)+
CASE(R17__c, &quot;N/A&quot;,0,1)+
CASE(q23__c, &quot;N/A&quot;,0,1)+
CASE(q24__c, &quot;N/A&quot;,0,1)+
CASE(q26__c, &quot;N/A&quot;,0,1)+
CASE(q27__c, &quot;N/A&quot;,0,1)+
CASE(q28__c, &quot;N/A&quot;,0,1)+
CASE(R18__c, &quot;N/A&quot;,0,1)+
CASE(q29__c, &quot;N/A&quot;,0,1)+
CASE(q30__c, &quot;N/A&quot;,0,1)+
CASE(q31__c, &quot;N/A&quot;,0,1)+
CASE(q32__c, &quot;N/A&quot;,0,1)+
CASE(q34__c, &quot;N/A&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Project_Manager__c</fullName>
        <description>Assigned_Specialist__c on the associated Project</description>
        <label>Implementation Project Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Score_Count_New__c</fullName>
        <description>For Score Count after Oct 2015</description>
        <formula>CASE(/*Inventory Verified*/q2__c, &quot;Yes&quot;,1,0)+
CASE(/*Market Pricing, KBB, NADA, Black Book*/q8__c, &quot;Yes&quot;,1,0)+
CASE(q4__c, &quot;Yes&quot;,1,0)+
CASE(q5__c, &quot;Yes&quot;,1,0)+
CASE(q13__c, &quot;Yes&quot;,1,0)+
CASE(q12__c, &quot;Yes&quot;,1,0)+
CASE(Success_Fail_Verification__c, &quot;Yes&quot;,1,0)+
CASE(CRM_Notes_Completed__c, &quot;Yes&quot;,1,0)+
CASE(q19__c, &quot;Yes&quot;,1,0)+
CASE(R14__c, &quot;Yes&quot;,1,0)+
CASE(q20__c, &quot;Yes&quot;,1,0)+
CASE(R17__c, &quot;Yes&quot;,1,0)+
CASE(q23__c, &quot;Yes&quot;,1,0)+
CASE(q27__c, &quot;Yes&quot;,1,0)+
CASE(q28__c, &quot;Yes&quot;,1,0)+
CASE(R18__c, &quot;Yes&quot;,1,0)+
CASE(q30__c, &quot;Yes&quot;,1,0)+
CASE(q31__c, &quot;Yes&quot;,1,0)+
CASE(Lot_Vantage__c, &quot;Yes&quot;,1,0)+
CASE(xTime__c, &quot;Yes&quot;,1,0)+
CASE(IC_Ad_Hoc_1__c, &quot;Yes&quot;,1,0)+
CASE(IC_Ad_Hoc_2__c, &quot;Yes&quot;,1,0)+
CASE(IC_Ad_Hoc_3__c, &quot;Yes&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Score Count New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Score_Count__c</fullName>
        <formula>CASE(q1__c, &quot;YES&quot;, 1, 0)+
CASE(q2__c, &quot;YES&quot;, 1, 0)+
CASE(q8__c, &quot;YES&quot;, 1, 0)+
CASE(q3__c, &quot;YES&quot;, 1, 0)+
CASE(R13__c, &quot;YES&quot;, 1, 0)+
CASE(q4__c, &quot;YES&quot;, 1, 0)+
CASE(q5__c, &quot;YES&quot;, 1, 0)+
CASE(q6__c, &quot;YES&quot;, 1, 0)+
CASE(q7__c, &quot;YES&quot;, 1, 0)+
CASE(q10__c, &quot;YES&quot;, 1, 0)+
CASE(q12__c, &quot;YES&quot;, 1, 0)+
CASE(R14__c, &quot;YES&quot;, 1, 0)+
CASE(q13__c, &quot;YES&quot;, 1, 0)+
CASE(q19__c, &quot;YES&quot;, 1, 0)+
CASE(R15__c, &quot;YES&quot;, 1, 0)+
CASE(R16__c, &quot;YES&quot;, 1, 0)+
CASE(R17__c, &quot;YES&quot;, 1, 0)+
CASE(q23__c, &quot;YES&quot;, 1, 0)+
CASE(q24__c, &quot;YES&quot;, 1, 0)+
CASE(q26__c, &quot;YES&quot;, 1, 0)+
CASE(q27__c, &quot;YES&quot;, 1, 0)+
CASE(q28__c, &quot;YES&quot;, 1, 0)+
CASE(R18__c, &quot;YES&quot;, 1, 0)+
CASE(q29__c, &quot;YES&quot;, 1, 0)+
CASE(q30__c, &quot;YES&quot;, 1, 0)+
CASE(q31__c, &quot;YES&quot;, 1, 0)+
CASE(q32__c, &quot;YES&quot;, 1, 0)+
CASE(q34__c, &quot;YES&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Score__c</fullName>
        <formula>Implementation_Score_Count__c/Implementation_Answered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Score_new__c</fullName>
        <description>For score count after Oct 2015</description>
        <formula>Implementation_Score_Count_New__c/Implementation_Answered_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Score new</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Configuration_Notes__c</fullName>
        <label>Inventory Configuration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Count__c</fullName>
        <label>Inventory Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Completed_Date__c</fullName>
        <label>Inventory Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Inventory Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification_On_Time__c</fullName>
        <label>Inventory Verification On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Verified_Set_Days_Due__c</fullName>
        <defaultValue>23</defaultValue>
        <label>Inventory Verified Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_verification_form_notes__c</fullName>
        <label>Inventory Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_1_Notes__c</fullName>
        <label>LC Ad Hoc 1 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_1__c</fullName>
        <label>LC Ad Hoc 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_2_Notes__c</fullName>
        <label>LC Ad Hoc 2 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_2__c</fullName>
        <label>LC Ad Hoc 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_3_Notes__c</fullName>
        <label>LC Ad Hoc 3 Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_Ad_Hoc_3__c</fullName>
        <label>LC Ad Hoc 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LC_Answered_New__c</fullName>
        <description>Tally of the number of questions answered in the Launch Coordinator section after Oct 2015.</description>
        <formula>CASE(/*Users Entered*/q1__c, &quot;N/A&quot;,0,1)+
CASE(/*Admin settings verification*/R01__c, &quot;N/A&quot;,0,1)+
CASE(/*Processes &amp; Templates Copied*/q16__c, &quot;N/A&quot;,0,1)+
CASE(Processes_and_Templates_Verification__c, &quot;N/A&quot;,0,1)+
CASE(/*Desking Configuration - Loaded from DMS */R07__c, &quot;N/A&quot;,0,1)+
CASE(/*Desking Configuration - Loaded the Fees*/R08__c, &quot;N/A&quot;,0,1)+
CASE(Desking_Verification__c, &quot;N/A&quot;,0,1)+
CASE(/*All Forms Have Been Uploaded*/R05__c, &quot;N/A&quot;,0,1)+
CASE(/*Received Signed Verification for Forms*/q21__c, &quot;N/A&quot;,0,1)+
CASE(DMS_Push__c, &quot;N/A&quot;,0,1)+
CASE(q24__c, &quot;N/A&quot;,0,1)+
CASE(DT_RT_1_Enabled_Tested__c, &quot;N/A&quot;, 0,1)+
CASE(q34__c, &quot;N/A&quot;,0,1)+
CASE(q7__c, &quot;N/A&quot;,0,1)+
CASE(q6__c, &quot;N/A&quot;,0,1)+
CASE(q26__c, &quot;N/A&quot;,0,1)+
CASE(q29__c, &quot;N/A&quot;,0,1)+
CASE(Target__c, &quot;N/A&quot;, 0,1)+
CASE(Limited_Users__c, &quot;N/A&quot;, 0,1)+
CASE(Test_Lead_Submitted__c, &quot;N/A&quot;, 0,1)+
CASE(LC_Ad_Hoc_1__c, &quot;N/A&quot;,0,1)+
CASE(LC_Ad_Hoc_2__c, &quot;N/A&quot;,0,1)+
CASE(LC_Ad_Hoc_3__c, &quot;N/A&quot;,0,1)</formula>
        <label>LC Answered New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LC_Answered__c</fullName>
        <description>Tally of the number of questions answered in the Launch Coordinator section.</description>
        <formula>CASE(R01__c, &quot;N/A&quot;,0,1)+
CASE(R05__c, &quot;N/A&quot;,0,1)+
CASE(R07__c, &quot;N/A&quot;,0,1)+
CASE(R08__c, &quot;N/A&quot;,0,1)+
CASE(R09__c, &quot;N/A&quot;,0,1)+
CASE(R10__c, &quot;N/A&quot;,0,1)+
CASE(R04__c, &quot;N/A&quot;,0,1)+
CASE(R02__c, &quot;N/A&quot;,0,1)+
CASE(R03__c, &quot;N/A&quot;,0,1)+
CASE(R06__c, &quot;N/A&quot;,0,1)+
CASE(R11__c, &quot;N/A&quot;,0,1)+
CASE(R12__c, &quot;N/A&quot;,0,1)+
CASE(q16__c, &quot;N/A&quot;,0,1)+
CASE(q18__c, &quot;N/A&quot;,0,1)+
CASE(q21__c, &quot;N/A&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LC_Score_Count_New__c</fullName>
        <description>A tally of the amount of questions answered yes after Oct 2015.</description>
        <formula>CASE(q1__c, &quot;YES&quot;, 1, 0)+
CASE(R01__c, &quot;YES&quot;, 1, 0)+
CASE(q16__c, &quot;YES&quot;, 1, 0)+
CASE(Processes_and_Templates_Verification__c, &quot;YES&quot;, 1, 0)+
CASE(R07__c, &quot;YES&quot;, 1, 0)+
CASE(R08__c, &quot;YES&quot;, 1, 0)+
CASE(Desking_Verification__c, &quot;YES&quot;, 1, 0)+
CASE(R05__c, &quot;YES&quot;, 1, 0)+
CASE(q21__c, &quot;YES&quot;, 1, 0)+
CASE(DMS_Push__c, &quot;YES&quot;, 1, 0)+
CASE(q24__c, &quot;YES&quot;, 1, 0)+
CASE(DT_RT_1_Enabled_Tested__c, &quot;YES&quot;, 1,0)+ 
CASE(q34__c, &quot;Yes&quot;,1,0)+
CASE(q7__c, &quot;Yes&quot;,1,0)+
CASE(q6__c, &quot;Yes&quot;,1,0)+
CASE(q26__c, &quot;Yes&quot;,1,0)+
CASE(q29__c, &quot;Yes&quot;,1,0)+
CASE(Target__c, &quot;Yes&quot;, 1,0)+ 
CASE(Limited_Users__c, &quot;Yes&quot;, 1,0)+ 
CASE(Test_Lead_Submitted__c, &quot;Yes&quot;, 1,0)+ 
CASE(LC_Ad_Hoc_1__c, &quot;YES&quot;, 1, 0)+
CASE(LC_Ad_Hoc_2__c, &quot;YES&quot;, 1, 0)+
CASE(LC_Ad_Hoc_3__c, &quot;YES&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Score Count New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>